--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.18.2",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
